# PyCG

./: README.md  pyproject.toml  setup.py
pycg/formats/: fasten.py
pycg/machinery/: imports.py
