[project]
name = "PyCG"
version = "0.0.9"

description = "PyCG - Practical Python Call Graphs (fixed for Python 3.11+)"
readme = "README.md"
requires-python = ">=3.8"

licence = {file = "LICENCE"}
authors = [{name = "Vitalis Salis", email = "vitsalis@gmail.com"}]

# FIX: added packaging as required dependency (replaces pkg_resources)
dependencies = ["packaging"]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["flake8>=6.0.0", "isort>=5.12.0", "black>=22.12.0", "mock"]

[project.scripts]
pycg = "pycg.__main__:main"

[project.urls]
"Homepage" = "https://github.com/vitsalis/PyCG"
"Bug Tracker" = "https://github.com/vitsalis/PyCG/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# FIX: tell hatchling to use lowercase "pycg" as the package directory
packages = ["pycg"]

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310', 'py311']
preview = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | micro-benchmark
  | micro-benchmark-key-errs
)/
'''

[tool.ruff]
ignore = ["E501"]
exclude = [
    "micro-benchmark",
    "micro-benchmark-key-errs"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.isort]
profile = "black"
